--- a/src/css/main.css
+++ b/src/css/main.css
@@ -137,9 +137,27 @@ ol{
 }
 
 .todo_main{
-    width: 80%;
+    width: 85%;
 }
 .todo_main_con{
     width: 100%;
     height: 100%;
+    white-space: nowrap;
+    overflow-y: scroll;
+
 }
+.todo_main_row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 8px 0 4px;
+}
+.todo_column{
+    flex: 25%;
+    max-width: 25%;
+}
+.todo_column div {
+    width: calc ( 100% - 8px );
+    margin-top: 8px;
+    margin-left: 8px;
+    vertical-align: middle;
+  }
