--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,24 +1,21 @@
 html {
     height: 100%;
-    width:  100%;
+    width: 100%;
 }
 
-body{
+body {
     margin: 0;
     height: 100%;
 }
 
-
-
 .header_wrapper {
-    background-color:rgb(45, 121, 208);
+    background-color: rgb(45, 121, 208);
     color: aliceblue;
     height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
 }
-
 
 #app_logo {
     font-size: 38px;
@@ -29,7 +26,7 @@ body{
     align-items: center;
 }
 
-#app_title{
+#app_title {
     font-size: 130%;
     float: left;
     display: flex;
@@ -38,17 +35,16 @@ body{
     width: 20%;
 }
 
-.searchbox{
+.searchbox {
     width: 500px;
     height: 45px;
     background-color: white;
     display: flex;
     align-items: center;
     float: right;
-    
 }
 
-#header_search_logo{
+#header_search_logo {
     display: flex;
     width: 50px;
     height: 50px;
@@ -58,7 +54,7 @@ body{
     color: rgb(45, 121, 208);
 }
 
-#search_box_input{
+#search_box_input {
     float: left;
     align-self: center;
     width: calc(100% - 50px);
@@ -67,97 +63,106 @@ body{
     outline: none;
     font-size: 16px;
 }
-.main_under{
-    height: calc( 100% - 50px );
+
+.main_under {
+    height: calc( 100% - 50px);
     width: 100%;
     display: inline-flex;
 }
-.under_main_menu{
+
+.under_main_menu {
     height: 100%;
     min-width: 80px;
     width: 15%;
-    background-color:rgb(220, 220, 220);
+    background-color: rgb(220, 220, 220);
 }
-.user_s_profile{
+
+.user_s_profile {
     height: 160px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
-    
 }
-.user_info_setting{
+
+.user_info_setting {
     display: flex;
     height: 50px;
 }
-ol{
+
+ol {
     padding: 0;
     margin: 0;
     list-style: none;
 }
-.menu_button_con{
+
+.menu_button_con {
     margin: 0;
     height: 50px;
-
 }
-.menu_button{
+
+.menu_button {
     border: none;
     outline: none;
     padding: 0;
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: rgb(220, 220, 220);;
-
+    background-color: rgb(220, 220, 220);
+    ;
 }
-.menu_button:hover{
+
+.menu_button:hover {
     background-color: rgb(200, 200, 200);
 }
-.menu_button:active{
+
+.menu_button:active {
     background-color: rgb(179, 179, 179);
 }
 
-.menu_button_icon{
-   width: 50px;
-   height: 50px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-
+.menu_button_icon {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#canvas_logo{
+#canvas_logo {
     width: 30px;
-    height: 30px; 
+    height: 30px;
 }
 
-.menu_button_content{
+.menu_button_content {
     font-size: 15px;
 }
 
-.todo_main{
+.todo_main {
     width: 85%;
 }
-.todo_main_con{
+
+.todo_main_con {
     width: 100%;
     height: 100%;
     white-space: nowrap;
     overflow-y: scroll;
+}
 
-}
-.todo_main_row{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 8px 0 4px;
-}
-.todo_column{
-    flex: 25%;
-    max-width: 25%;
-}
-.todo_column div {
-    width: calc ( 100% - 8px );
-    margin-top: 8px;
-    margin-left: 8px;
+
+.reminder_con {
+    width: calc ( 100% - 8px);
+    margin: 8px;
     vertical-align: middle;
-  }
+    font-size: 20px;
+    border: 2px;
+    border-style: solid;
+    border-radius: 5px;
+    border: #888888;
+    box-shadow: 2px 5px 7px #888888;
+    padding: 5px;
+}
+
+.reminder_header .reminder_detail {
+    width: inherit;
+}
