--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,31 +138,16 @@ ol {
     font-size: 15px;
 }
 
-.todo_main {
+.todo_con_outside {
     width: 85%;
-}
-
-.todo_main_con {
-    width: 100%;
-    height: 100%;
-    white-space: nowrap;
-    overflow-y: scroll;
-}
-
-
-.reminder_con {
-    width: calc ( 100% - 8px);
-    margin: 8px;
-    vertical-align: middle;
-    font-size: 20px;
-    border: 2px;
-    border-style: solid;
-    border-radius: 5px;
-    border: #888888;
-    box-shadow: 2px 5px 7px #888888;
     padding: 5px;
 }
+.todo_con_inside{
+    width: calc( 100% - 10px );
+}
+.reminder_con{
+    width: 100%;
+    min-height: 90px;
+    border: solid 3px #aaaaaa;
 
-.reminder_header .reminder_detail {
-    width: inherit;
 }
