--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,17 @@ body {
     height: 100%;
 }
 
+.hidden{
+	display:none !important;
+ }
+
+.whiteboard {
+    background-color: rgb(75, 115, 138);
+    height: 100%;
+    width: 100%;
+    position:absolute;
+}
+
 .header_wrapper {
     background-color: rgb(45, 121, 208);
     color: aliceblue;
@@ -167,3 +178,92 @@ ol {
     fill: white;
 
 }
+
+/*   Login page   */
+ 
+#login_frame {
+    width: 400px;
+    height: 260px;
+    padding: 13px;
+ 
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -200px;
+    margin-top: -200px;
+ 
+    background-color: rgba(240, 255, 255, 0.5);
+ 
+    border-radius: 10px;
+    text-align: center;
+}
+ 
+form p > * {
+    display: inline-block;
+    vertical-align: middle;
+}
+ 
+#image_logo {
+    margin-top: 22px;
+}
+ 
+.label_input {
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+ 
+    width: 82px;
+
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+ 
+    color: white;
+    background-color: #3CD8FF;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+ 
+.text_field {
+    width: 278px;
+    height: 28px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 0;
+}
+ 
+#btn_login {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+ 
+    width: 120px;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+ 
+    color: white;
+    background-color: #3BD9FF;
+    border-radius: 6px;
+    border: 0;
+ 
+    float: left;
+}
+ 
+#forget_pwd {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+    position: relative;
+    float: right;
+    top: 5px;
+ 
+}
+ 
+#forget_pwd:hover {
+    color: blue;
+    text-decoration: underline;
+}
+ 
+#login_control {
+    padding: 0 28px;
+}
+/*   Login page end   */
