--- a/src/css/newevent.css
+++ b/src/css/newevent.css
@@ -1,38 +1,39 @@
-span{
-    cursor: pointer;
+#neweventpage{
+    position: absolute;
+    top:30%;
+    left: 35%;
+    background-color: grey;
 }
-span:hover{
-    background-color: blue;
-}
-#navi{
-    margin: auto;
+/* #navi{
+
     border: none;
     width: 400px;
     height: 20px;
     
-}
-#navi p{
-    display: inline-block;
-    vertical-align: middle;
-}
+} */
+
 
 #info{
-    margin: auto;
-    border: 1px solid black;
+    border: solid 2px;
     width: 400px;
     height: 300px;
-    padding: 10px;
 }
 
-#neweventpage{
+/* #neweventpage{
     width: 100%;
     height: 100%;
     
-}
+} */
 #buttonbox{
     margin-left: 30%;
 }
 
 .hidden{
     display: none;
+}
+
+.new_event_divs{
+    position: absolute;
+    top: 20px;
+    
 }
