--- a/src/css/newevent.css
+++ b/src/css/newevent.css
@@ -2,7 +2,7 @@
     position: absolute;
     top:30%;
     left: 35%;
-    background-color: grey;
+    background-color: rgb(216, 216, 216);
 }
 /* #navi{
 
@@ -16,7 +16,7 @@
 #info{
     border: solid 2px;
     width: 400px;
-    height: 300px;
+    height: 500px;
 }
 
 /* #neweventpage{
